tests/resource/valid/control_flow/for_over_type_union.mamba
def x: {Range, Str} := "MyString"

for i in x do
    print(i)
