tests/resource/invalid/type/operation/in_set_wrong_ty.mamba
def x := { "A", "B" }

2 in x
